force-app/main/default/objects/Feedback__c/Feedback__c.object-meta.xml
<CustomObject>
    <description>Feedback collected from a client for an event.</description>
    <label>Feedback</label>
    <labelPlural>Feedback</labelPlural>
    <nameField>
        <label>Feedback Reference</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>