force-app/main/default/objects/Feedback__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <description>Client that gave the feedback. Must match the client of the event.</description>
    <label>Client</label>
    <referenceTo>Client__c</referenceTo>
    <relationshipLabel>Feedback</relationshipLabel>
    <relationshipName>Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>