force-app/main/default/objects/Feedback__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <description>Event the feedback belongs to.</description>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Feedback</relationshipLabel>
    <relationshipName>Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>