force-app/main/default/objects/Feedback__c/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <description>Date of the related event, used to block feedback for past events.</description>
    <formula>Event__r.Event_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Date</label>
    <type>Date</type>
</CustomField>