force-app/main/default/objects/Feedback__c/validationRules/Feedback_Client_Must_Match_Event.validationRule-meta.xml
<ValidationRule>
    <active>true</active>
    <description>Feedback must be given by the client of the related event.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Client__c)), NOT(ISBLANK(Event__r.Client__c)), Client__c &lt;&gt; Event__r.Client__c)</errorConditionFormula>
    <errorDisplayField>Feedback__c.Client__c</errorDisplayField>
    <errorMessage>Feedback can only be given by the client of the related event.</errorMessage>
    <fullName>Feedback_Client_Must_Match_Event</fullName>
</ValidationRule>