force-app/main/default/objects/Feedback__c/validationRules/Feedback_Event_Required.validationRule-meta.xml
<ValidationRule>
    <active>true</active>
    <description>Feedback without an event has no meaning.</description>
    <errorConditionFormula>ISBLANK(Event__c)</errorConditionFormula>
    <errorDisplayField>Feedback__c.Event__c</errorDisplayField>
    <errorMessage>Select the event this feedback belongs to.</errorMessage>
    <fullName>Feedback_Event_Required</fullName>
</ValidationRule>