force-app/main/default/objects/Feedback__c/validationRules/Feedback_For_Upcoming_Events_Only.validationRule-meta.xml
<ValidationRule>
    <active>true</active>
    <description>Feedback is collected for current and future events only.</description>
    <errorConditionFormula>AND(ISNEW(), NOT(ISBLANK(Event_Date__c)), Event_Date__c &lt; TODAY())</errorConditionFormula>
    <errorDisplayField>Feedback__c.Event__c</errorDisplayField>
    <errorMessage>Feedback can only be recorded for an event that has not taken place yet.</errorMessage>
    <fullName>Feedback_For_Upcoming_Events_Only</fullName>
</ValidationRule>