force-app/main/default/objects/Feedback__c/validationRules/Feedback_Rating_Range.validationRule-meta.xml
<ValidationRule>
    <active>true</active>
    <description>The feedback rating is a score between 0 and 5.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Rating__c)), OR(Rating__c &lt; 0, Rating__c &gt; 5))</errorConditionFormula>
    <errorDisplayField>Feedback__c.Rating__c</errorDisplayField>
    <errorMessage>The rating must be a score between 0 and 5.</errorMessage>
    <fullName>Feedback_Rating_Range</fullName>
</ValidationRule>